--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -18,7 +18,13 @@
         <% end %>
         <% @campaigns.each do |campaign| %>
         <div class="card mb-4">
-          <%= image_for_campaign(campaign, :size => "725x300") %>
+            <header class="py-5 bg-image-full" style="background-image: 
+              <% if campaign.image_file_name.blank? %>
+                url(/assets/d20.png)
+              <% else %>
+                url(/assets/<%= campaign.image_file_name%>)
+              <% end %>  
+            ;"></header>
           <div class="card-body">
             <h2 class="card-title"><%= link_to campaign.name, campaign %><small><%=campaign.category%></small></h2>
             <p class="card-text"><%= truncate(campaign.description, length: 50, seperator: ' ') %></p>
