--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -4,7 +4,7 @@
         <h1 class="my-4">Update Campaign
         </h1>
         <hr>
-        <%= render 'form' %>
+        <%= render 'form', :campaign=> @campaign %>
       </div>
     </div>
 </div>
