--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -18,19 +18,19 @@
         <% end %>
         <% @campaigns.each do |campaign| %>
         <div class="card mb-4">
-            <header class="py-5 bg-image-full" style="background-image: 
-              <% if campaign.image_file_name.blank? %>
-                url(/assets/d20.png)
-              <% else %>
+            <header class="py-5 bg-image-full" style="background-image:
+              <% if campaign.image_file_name? %>
                 url(/assets/<%= campaign.image_file_name%>)
-              <% end %>  
+              <% else %>
+                url(/assets/d20.png)
+              <% end %>
             ;"></header>
           <div class="card-body">
             <h2 class="card-title"><%= link_to campaign.name, campaign %><small> [<%=campaign.category%>]</small></h2>
             <p class="card-text"><%= truncate(campaign.description, length: 100, seperator: ' ') %></p>
           </div>
           <div class="card-footer text-muted">
-            Started <%= time_ago_in_words(campaign.created_at) %> ago
+            Started <%= campaign.created_at.strftime("%B %d, %Y") %>
           </div>
         </div>
         <% end %>
@@ -71,7 +71,5 @@
 
     </div>
     <!-- /.row -->
-
-
   </div>
   <!-- /.container -->
