--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for @meeting do |f| %>
-  <%= render "shared/errors", object: @meeting %>
+<%= form_for meeting do |f| %>
+  <%= render "shared/errors", object: meeting %>
   <fieldset>
     <ul style="list-style-type:none;">
       <li class="required">
@@ -21,6 +21,5 @@
       <%= link_to "Cancel", meetings_path %>
       </p>
     </ul>
-    
   </fieldset>
 <% end %>
