--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -4,7 +4,7 @@
         <h1 class="my-4">Edit Event
         </h1>
         <hr>
-        <%= render 'form' %>
+        <%= render 'form', :meeting => @meeting %>
       </div>
     </div>
 </div>
